--- a/css/breakout.css
+++ b/css/breakout.css
@@ -18,3 +18,46 @@ canvas{
     display: block;
     border-radius: 10px;
 }
+
+
+h1 {
+    font-size: 45px;
+    color: white;
+}
+
+.btn
+{
+    cursor: pointer;
+    border: 0;
+    padding: 10px 20px;
+    background: #000000;
+    color: #ffffff;
+    border-radius: 5px;
+}
+
+.btn:hover{
+    background: #333333;
+}
+
+.btn:active{
+    transform: scale(.98);
+}
+
+.rules-btn{
+    position: absolute;
+    top: 30px;
+    left: 30px;
+}
+
+.rules{
+position: absolute;
+top: 0px;
+left: 0px;
+background: #333333;
+color: #ffffff;
+min-height: 100vh;
+width: 400px;
+padding: 20px;
+line-height: 1.5;
+transform: translateX(-400px);
+}
