--- a/css/breakout.css
+++ b/css/breakout.css
@@ -60,4 +60,9 @@ width: 400px;
 padding: 20px;
 line-height: 1.5;
 transform: translateX(-400px);
+transition: transform 1s ease-in-out;
+}
+
+.rules.show{
+    transform: translateX(0)
 }
