--- a/css/insect.css
+++ b/css/insect.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 * {
     box-sizing: border-box;
@@ -6,5 +6,14 @@
 }
 
 body {
-    background-color: #d1b475;
+    background-color: #bfa875;
+    font-family: "Press Start 2P", system-ui;
+    color: white;
+    height: 100vh;
+    overflow: hidden;
+    text-align: center;
+}
+
+.choose-insect-btn img{
+
 }
