--- a/css/hangman.css
+++ b/css/hangman.css
@@ -1,6 +1,27 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
+    font-family: Helvetica, Arial, sans-serif;
     background-color: #56789f;
-    color: #ffffff
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 80vh;
+    margin:0;
+    overflow: hidden;
+}
+
+h1{
+    margin: 20px 0 0;
+}
+
+.game-container {
+    padding: 20px 30px;
+    position: relative;
+    
 }
 
 .figure-container{
