--- a/css/insect.css
+++ b/css/insect.css
@@ -100,6 +100,7 @@ object-fit: contain;
 }
 
 .message {
+    opacity: 0;
     line-height: 1.7;
     width: 100%;
     background-color: rgba(0,0,0,0.2);
