Thu, Apr 18, 2024, 2:38 PM -07:00

--- a/css/insect.css
+++ b/css/insect.css
@@ -26,6 +26,7 @@ object-fit: contain;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transition: margin 0.5s ease-in;
 }
 
 .btn {
