--- a/css/hangman.css
+++ b/css/hangman.css
@@ -72,3 +72,14 @@ h1{
     margin: 0 3px;
     border-bottom: 3px solid #6789af
 }
+
+.popup-container {
+    background-color: #113322 .3;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    
+}
