--- a/css/hangman.css
+++ b/css/hangman.css
@@ -1,20 +1,21 @@
+
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: Helvetica, Arial, sans-serif;
-    background-color: #56789f;
+    background-color: #34495e;
     color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 80vh;
-    margin:0;
+    margin: 0;
     overflow: hidden;
 }
 
-h1{
+h1 {
     margin: 20px 0 0;
 }
 
@@ -26,8 +27,8 @@ h1{
     width: 450px;
 }
 
-.figure-container{
-    fill:transparent;
+.figure-container {
+    fill: transparent;
     stroke: #ffffff;
     stroke-width: 4px;
     stroke-linecap: round;
@@ -37,7 +38,7 @@ h1{
     display: none;
 }
 
-.wrong-letters-container{
+.wrong-letters-container {
     position: absolute;
     top: 20px;
     right: 20px;
@@ -50,7 +51,7 @@ h1{
     margin: 0 0 5px;
 }
 
-.wrong-letters-container span{
+.wrong-letters-container span {
     font-size: 24px;
 }
 
@@ -59,7 +60,7 @@ h1{
     position: absolute;
     bottom: 10px;
     left: 50%;
-    transform: translateX(-50%)
+    transform: translateX(-50%);
 }
 
 .letter {
@@ -70,11 +71,12 @@ h1{
     height: 50px;
     width: 20px;
     margin: 0 3px;
-    border-bottom: 3px solid #6789af
+    border-bottom: 3px solid #2980b9;
 }
 
+
 .popup-container {
-    background-color:  rgba(0,0,0, .3);
+    background-color: rgba(0, 0, 0, 0.3);
     position: fixed;
     top: 0;
     bottom: 0;
@@ -89,25 +91,26 @@ h1{
 .popup {
     background: #2980b9;
     border-radius: 5px;
-    box-shadow: 0 15px 10px 3px rgba(0,0,0, 0.1);
+    box-shadow: 0 15px 10px 3px rgba(0, 0, 0, 0.1);
+    padding: 20px;
     text-align: center;
 }
 
 .popup button {
     cursor: pointer;
-    background-color: white;
-    color: #56789f;
+    background-color: #ffffff;
+    color: #2980b9;
     margin-top: 20px;
     padding: 12px 20px;
     font-size: 16px;
 }
 
 .popup button:active {
-    transform: scale(0.97);
+    transform: scale(0.98);
 }
 
 .notification-container {
-    background-color: rgba(0,0,0, 0.3);
+    background-color: rgba(0, 0, 0, 0.3);
     padding: 15px 20px;
     border-radius: 10px 10px 0 0;
     position: absolute;
@@ -119,6 +122,6 @@ h1{
     margin: 0;
 }
 
-.notification-container .show{
-    transform: translateY(-50px)
+.notification-container.show {
+    transform: translateY(-50px);
 }
