--- a/css/hangman.css
+++ b/css/hangman.css
@@ -27,17 +27,6 @@ h1 {
     width: 450px;
 }
 
-.figure-container {
-    fill: transparent;
-    stroke: #ffffff;
-    stroke-width: 4px;
-    stroke-linecap: round;
-}
-
-.figure-part {
-    display: none;
-}
-
 .wrong-letters-container {
     position: absolute;
     top: 20px;
@@ -47,7 +36,7 @@ h1 {
     text-align: right;
 }
 
-.wrong-letters-container p {
+.wrong-letters-containers p {
     margin: 0 0 5px;
 }
 
@@ -71,35 +60,45 @@ h1 {
     height: 50px;
     width: 20px;
     margin: 0 3px;
-    border-bottom: 3px solid #2980b9;
+    border-bottom: 3px solid #2980B9;
 }
 
+.figure-container {
+    fill: transparent;
+    stroke: #ffffff;
+    stroke-width: 4px;
+    stroke-linecap: round;
+}
+
+.figure-part {
+    display: none;
+}
 
 .popup-container {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0,0,0,0.3);
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    /* display: flex; */
+    /*display: flex;*/
     display: none;
     align-items: center;
     justify-content: center;
 }
 
 .popup {
-    background: #2980b9;
+    background: #2980B9;
     border-radius: 5px;
-    box-shadow: 0 15px 10px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 15px 10px 3px rgba(0,0,0,0.1);
     padding: 20px;
     text-align: center;
 }
 
 .popup button {
     cursor: pointer;
-    background-color: #ffffff;
-    color: #2980b9;
+    background-color: white;
+    color: #2980B9;
     margin-top: 20px;
     padding: 12px 20px;
     font-size: 16px;
@@ -110,7 +109,7 @@ h1 {
 }
 
 .notification-container {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0,0,0,0.3);
     padding: 15px 20px;
     border-radius: 10px 10px 0 0;
     position: absolute;
@@ -123,5 +122,5 @@ h1 {
 }
 
 .notification-container.show {
-    transform: translateY(-50px);
+    transform: translate(-50px);
 }
